--- a/popup.html
+++ b/popup.html
@@ -34,7 +34,7 @@
 			<div class="col-sm-3">
 				<div class="rating-block center-block">
           <img id="iconscore" style="float:left;margin:10px 10px 0px 0px" src="img/medium.png"/>
-					<h2 id="scored" style="margin-top: 25px;margin-bottom: 10px; font-size:20px"class="bold"> <span>Processing...</span> <br><small>Detected based on page content</small></h2>
+					<h2 id="scored" style="margin-top: 25px;margin-bottom: 10px; font-size:20px"class="bold"> <span>Processing...</span> <br><small id="smallNote" style="display: none">Detected based on page content</small></h2>
 				</div>
 			</div>
 		</div>
@@ -45,7 +45,7 @@
 				<div class="review-block">
           <div class="row">
             <div class="col-sm-3">
-              <div class="review-block-title"><a id="fakeLink" href="" target="_blank"></a> </div>
+              <div class="review-block-title">Source:&nbsp;<a id="fakeLink" href="" target="_blank"></a> </div>
             </div>
           </div>
 				</div>
