--- a/options.html
+++ b/options.html
@@ -15,12 +15,12 @@
     <h2>Options</h2>
     <form id="options">
       <input type="checkbox" name="isActivated" checked style="display:none;"><br>
-    Show notification when hoax or fake news detected:
+    Show desktop notification when hoax or fake news detected:
       <select name="showNotif">       
         <option>No</option>
         <option>Yes</option>
       </select><br><br>
-    Auto-detect hoax or fake news (if set to "No", manually click extension icon):
+    Auto-detect hoax or fake news (if set to "No", click extension icon to detect):
       <select name="autoDetect">       
         <option>No</option>
         <option>Yes</option>
